[Mac][Material Design] Fix regression in position of chevron icon.

Fixes a regression with the chevron-overflow button caused by a recent
cl that adjusted the location of bookmark button icons where there is no
title title.

R=avi@chromium.org
BUG=640131

Review-Url: https://codereview.chromium.org/2304643002
Cr-Commit-Position: refs/heads/master@{#416016}

Former-commit-id: 68058edebdc748f9df588a218ddce7fb90aa7635